--- a/ASSETS/CSS/paginaFilme.css
+++ b/ASSETS/CSS/paginaFilme.css
@@ -192,7 +192,9 @@ main{
 .info-filme-card{
     display: flex;
     flex-direction: column;
+    margin-right: 50px;
     gap: 100px;
+    margin-bottom: 20px;
 }
 
 .info-filme-card-titulo{
@@ -202,31 +204,17 @@ main{
 }
 
 .info-filme-card-p{
+    display: inline-block;
     font-size: 20;
     font-weight: 300;
-}
-
-
-#graficoLucro{
-    position: relative;
-    padding: 0;
-    margin: 0;
-    display: block;
-    bottom: 30px;
+    
 }
 
 .porcentagem-lucro{
     font-size: 20px;
-    display: flex;
     align-items: center;
     font-weight: 300;
-}
-
-.porcentagem-lucro i{
     padding-top: 5px;
-    padding-right: 10px;
-    font-size: 16px;
-    color: green;
 }
 
 .filmes-recomendados{
@@ -256,6 +244,10 @@ main{
     margin-right: 30px;
     overflow: hidden;
     width: 220px;
+}
+
+.filmes-recomendados__card:hover{
+    cursor: pointer;
 }
 
 .filmes-recomendados__card-imagem{
