tratamento para imagem de atores e mudança nas recomendações da paginaFilme

--- a/ASSETS/CSS/paginaFilme.css
+++ b/ASSETS/CSS/paginaFilme.css
@@ -163,7 +163,8 @@ main{
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 5px;
-    white-space: normal;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .elenco__card-info-ator p{
