--- a/ASSETS/CSS/paginaFilme.css
+++ b/ASSETS/CSS/paginaFilme.css
@@ -45,6 +45,7 @@ main{
     background-color: rgba(255, 255, 255, 0.217);
     padding: 20px;
     max-width:700px;
+    width: 700px;
     border-radius: 30px;
     border: 1px solid rgb(0, 0, 0);
 }
