--- a/ASSETS/CSS/style.css
+++ b/ASSETS/CSS/style.css
@@ -398,8 +398,7 @@ ul li a{
     display: flex;
     align-items: center;
     padding: 10px;
-    margin-left: 10px;
-    gap: 15px;
+    justify-content: center;
 }
 
 .carrousel__card-opcoes a{
@@ -414,6 +413,7 @@ ul li a{
     color: white;
     text-align: center;
     padding: 5px 15px;
+    width: 100px;
 }
 
 
