--- a/ASSETS/CSS/paginaFilme.css
+++ b/ASSETS/CSS/paginaFilme.css
@@ -264,3 +264,19 @@ main{
     padding: 15px;
 
 }
+
+.container-trailer{
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6); 
+    display: none;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.iframe-trailer{
+    width: 60vw;
+    height: 60vh;
+}
