--- a/ASSETS/CSS/paginaFilme.css
+++ b/ASSETS/CSS/paginaFilme.css
@@ -27,7 +27,8 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0 0 0 80%;
-    border: 2px solid black;
+    border-bottom: 3px solid black;
+    border-left: 2px solid black;
 }
 
 .infoFilmes__conteudo{
@@ -44,7 +45,7 @@ main{
 .infos-pricipal-filme{
     background-color: rgba(255, 255, 255, 0.217);
     padding: 20px;
-    max-width:700px;
+    min-width: 500px;
     width: 700px;
     border-radius: 30px;
     border: 1px solid rgb(0, 0, 0);
@@ -90,7 +91,7 @@ main{
     border: 2px solid white;
     border-radius: 20px;
     font-size: 20px;
-    margin-left: 20%;
+    margin-left: 40%;
 }
 
 .infoFilme__data-genero-duracao{
@@ -104,7 +105,7 @@ main{
 }
 
 .infoFilme__data-genero-duracao i{
-    font-size: 10px;
+    font-size: 5px;
 }
 
 .Sinopse__container{
@@ -219,6 +220,12 @@ main{
     padding-top: 5px;
 }
 
+.container-grafico-lucro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .filmes-recomendados{
     background-color: #484848;
 }
@@ -279,4 +286,231 @@ main{
 .iframe-trailer{
     width: 60vw;
     height: 60vh;
+}
+
+@media only screen and (max-width: 1180px) {
+    
+    #filme-titulo{
+        font-size: 30px;
+    }
+    
+    #filme-tagline{
+        font-size: 26px;
+    }
+    
+    .infoFilme__container-botoes{
+        display: flex;
+        gap: 30px;
+        margin-bottom: 50px;
+        border-radius: 10px;
+    }
+    
+    
+    #assister-trailer-botao{
+        margin-left: 20%;
+    }
+    
+
+}
+
+@media only screen and (max-width: 1002px) {
+    
+    #filme-titulo{
+        font-size: 26px;
+    }
+    
+    #filme-tagline{
+        font-size: 22px;
+    }
+    
+    .infoFilme__container-botoes{
+        display: flex;
+        gap: 20px;
+        margin-bottom: 50px;
+        border-radius: 10px;
+    }
+    
+    
+    #assister-trailer-botao{
+        margin-left: 10%;
+    }
+
+    .infoFilme__data-genero-duracao{
+        font-size: 15px;
+    }
+    
+
+}
+
+@media only screen and (max-width: 947px) {
+    .informacoes-adicionais{
+        margin: 20px 10% 20px 10%;
+    }
+    
+    .titulo-informacoes-adicionais{
+        font-size: 36px;
+        font-weight: bold;
+        margin-bottom: 30px;
+    }
+    
+    .informacoes-adicionais-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        
+    }
+    
+    .info-filme-card{
+        display: flex;
+        flex-direction: column;
+        margin-right: 50px;
+        gap: 100px;
+        margin-bottom: 20px;
+    }
+    
+    .info-filme-card-titulo{
+        font-size: 25px;
+        font-weight: 600;
+        padding-bottom: 5px;
+    }
+    
+    .info-filme-card-p{
+        display: inline-block;
+        font-size: 20;
+        font-weight: 300;
+        
+    }
+    
+    .porcentagem-lucro{
+        font-size: 20px;
+        align-items: center;
+        font-weight: 300;
+        padding-top: 5px;
+    }
+
+    #graficoLucro{
+        margin-top: 30px;
+    }
+
+}
+
+
+@media only screen and (max-width: 910px) {
+    
+    .infoFilme__poster-img{
+        border-radius: 5px;
+    }
+    
+    .infoFilme__container{
+        
+        border-bottom: unset;
+        border-left: unset;
+    }
+    
+    .infoFilmes__conteudo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.8);
+        
+    }
+    
+    .infos-pricipal-filme{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: unset;
+        min-width: unset;
+        width: 100vw;
+        border-radius: unset;
+        border: unset;
+    }
+    
+    #filme-titulo{
+        font-size: 24px;
+        text-align: center;
+    }
+
+    #filme-tagline{
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    
+    #assister-trailer-botao{
+        font-size: 15px;
+        padding: 10px;
+        margin-left: unset;
+    }
+    
+    .infoFilme__data-genero-duracao{
+        font-size: 20px;  
+    }
+    .Sinopse__container p{
+        font-size: 26px;
+        font-weight: 300;
+        
+    }
+
+
+}
+
+@media only screen and (max-width: 700px){
+
+    .Sinopse__container p{
+        font-size: 23px;
+        font-weight: 300;
+        
+    }
+}
+
+
+@media only screen and (max-width: 580px){
+    .informacoes-adicionais-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0;
+
+    }
+
+    #graficoLucro{
+        width: 270px;
+    }
+
+    .info-filme-card{
+        display: flex;
+        flex-direction: column;
+        margin-right: 50px;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
+    .filmes-recomendados h1 {
+
+        font-size: 26px;
+  
+    }
+}
+
+@media only screen and (max-width: 320px){
+
+    .infoFilme__poster-img{
+        width: 260px;
+    }
+
+    .infoFilme__container-botoes{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    #assister-trailer-botao{
+        font-size: 25px;
+        padding: 10px;
+        
+    }
+
+    .Sinopse__container p{
+        font-size: 20px;
+    }
 }
