--- a/ASSETS/CSS/style.css
+++ b/ASSETS/CSS/style.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 100px;
+    height: 70px;
     background-color: var(--cor-header-dark);
     padding: 0 20px 0 20px;
 }
@@ -61,7 +61,7 @@
 .cabecalho__pesquisar{
     display: flex;
     align-items: center;
-    margin-right: 100px;
+    
 }
 
 .pesquisar__input{
@@ -117,6 +117,8 @@
     overflow-x: hidden;
     display: none;
 }
+
+
 
 
 .pesquisar__resultado-card{
@@ -181,6 +183,7 @@
 }
 
 .switch {
+    display: flex;
     position: relative;
     background-color: #777;
     background-image: url('../IMG/moon-solid.svg') ;
@@ -190,7 +193,6 @@
     width: 6cap;
     height: 30px;
     border-radius: 20px;
-    display: flex;
     align-items: center;
     padding: 5px;
     cursor: pointer;
@@ -239,7 +241,7 @@
     display: flex;
     align-items: center;
     font-size: 40px;
-    height: 100px;
+    height: 70px;
     padding-left: 20px;
 }
 
@@ -348,7 +350,7 @@ ul li a{
     margin: 20px;
     display: grid;
     justify-content: center;
-    grid-template-columns: 200px 200px 200px 200px 200px;
+    grid-template-columns: 200px 200px 200px 200px 200px 200px;
     gap: 20px;
     
 
@@ -416,6 +418,190 @@ ul li a{
     width: 100px;
 }
 
+.container-botao-pesquisa{
+    display: none;
+}
+
+.container-botao-pesquisa span{
+    font-size: 25px;
+    background-color: #282828;
+    padding: 10px;
+    border-radius: 50%;
+    color: white;
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+    
+    .carrousel{
+        grid-template-columns: 200px 200px 200px 200px ;     
+    }
+
+
+}
+
+@media only screen and (max-width: 1340px) {
+    
+    .carrousel{
+        grid-template-columns: 200px 200px 200px 200px;     
+    }
+
+
+}
+
+@media only screen and (max-width: 1050px) {
+    
+    .pesquisar__container-resultado{
+        width: 480px;
+        height: 300px;
+    }
+
+    .pesquisar__input{
+        width: 500px;
+    }
+
+}
+
+@media only screen and (max-width: 930px) {
+    
+    .carrousel{
+        grid-template-columns: 200px 200px 200px;     
+    }
+
+    .pesquisar__container-resultado{
+        width: 380px;
+        height: 300px;
+    }
+
+    .pesquisar__input{
+        width: 400px;
+    }
+
+
+}
+
+
+@media only screen and (max-width: 820px) {
+    
+    
+    .cabecalho__pesquisar{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        border-radius: 0;
+        width: 100vw;
+        display: none;
+    }
+
+    .pesquisar__botao{
+        display: none;
+    }
+
+    .pesquisar__input{
+        border-radius: 0;
+        width: 100vw;
+    }
+
+    .pesquisar__container-resultado{
+        width: 100vw;
+        height: 100vh;
+        top: 40px;
+        margin-left: 0;
+    }
+
+
+    
+    .cabecalho{
+        display: flex;
+        align-items: center;
+    
+        background-color: var(--cor-header-dark);
+        
+    }
+    
+    .container-botao-pesquisa{
+        display: block;
+        margin-left: 40vw;
+    }
+
+}
+
+@media only screen and (max-width: 680px) {
+
+    .carrousel{
+        grid-template-columns: 200px 200px;     
+    }
+
+    .container-botao-pesquisa{
+        display: block;
+        margin-left: 25vw;
+    }
+    
+}
+
+@media only screen and (max-width: 560px) {
+
+    .container-botao-pesquisa{
+        margin-left: 15vw;
+    }
+    
+}
+
+@media only screen and (max-width: 480px) {
+
+    .container-botao-pesquisa{
+        margin-left: 10vw;
+    }
+    
+    .pesquisar__filme-categ{
+        font-size: 12px;
+    }
+
+    
+}
+
+@media only screen and (max-width: 430px) {
+
+    .carrousel{
+        grid-template-columns: 200px;     
+    }
+
+    
+    .switch {
+        display: none;
+   
+    } 
+
+    .container-botao-pesquisa{
+        margin-left: 0;
+    }
+    
+}
+
+
+@media only screen and (max-width: 400px) {
+
+    .pesquisar__filme-categ{
+        font-size: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 360px) {
+
+    .container-botao-pesquisa span{
+       font-size: 15px;
+    }
+
+    .cabecalho__titulo{
+        font-size: 30px;
+    }
+
+    .pesquisar__filme-categ{
+        font-size: 10px;
+    }
+}
 
 
 
